--- a/SMALL TRICKY TRICKS/Regular Expression sample.ipynb
+++ b/SMALL TRICKY TRICKS/Regular Expression sample.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "source": [
     "### 结合题解，使用首次听闻的DP大法写的代码  \n",
-    "待补充"
+    "。。。其实就是上面那个解法，指dynamic planning动态规划算法"
    ]
   }
  ],
